--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 import requests
 
-number=879
 start='2021.11.08'
 finish='2021.11.14'
 lng=1
 
-response = requests.get('https://rasp.omgtu.ru/api/schedule/person', params={
-    "number": number,
+response = requests.get('https://rasp.omgtu.ru/api/schedule/person/1012', params={
     "start": start,
     "finish": finish,
     "lng": lng
