--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-import requestscd
-
-start='2021.11.08'
-finish='2021.11.14'
-lng=1
-
-response = requests.get('https://rasp.omgtu.ru/api/schedule/person/1012', params={
-    "start": start,
-    "finish": finish,
-    "lng": lng
-})
-
-data = response.json()
-print(data)
+.venv
+.idea
